[Profile picker] Make the window fit well on the screen

This CL makes sure that the profile picker window fits on the current
screen. Moreover, it forces the window to be somewhat smaller then the
current screen so that it still looks like a dialog window.

Bug: 773501
Change-Id: If5fef1920387c6fd421c3b7257426e6bacd6fdad
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2362887
Commit-Queue: Jan Krcal <jkrcal@chromium.org>
Commit-Queue: David Roger <droger@chromium.org>
Auto-Submit: Jan Krcal <jkrcal@chromium.org>
Reviewed-by: David Roger <droger@chromium.org>
Cr-Commit-Position: refs/heads/master@{#799091}